2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade,
	* src/callbacks.cc,
	* src/interface.cc: moving the menus to a (hidden) menubar to
	solve a warning regarding an accelerator group

2003-08-08  Niklas Knutsson  <nq@altern.org>

	* Move generated menus one step up
	* Add finalize() after conversion in callbacks.cc 

2003-08-08  Niklas Knutsson  <nq@altern.org>

	* Some more fixes that I do not remember
	* Fix (x+y)^(6+n)
	* Fix kWs = W^2 * s^2 in Calculator.cc
	* Do not convert units during the whole calculation, do it in finalize() afterwards instead
	* Make units work even better. 
	* Move OCT, HEX, BIN and BASE functions to category "Number Bases"

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: added -Wall stuff again (was just a typo)
	* src/interface.cc: removed some unneccessary variables from
	create_window 

2003-08-08  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade: includes the complete main window now
	* src/callbacks.cc: removed the GtkHSeparator (the're not used anymore)
	* src/interface.cc: moved the whole main window to the glade file

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* data/qalculate.glade: added the expression menu and the result menu
	* po/de.po: updated translation
	* src/callbacks.cc: glade updates
	* src/interface.cc: glade updates

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* src/interface.cc,
	* src/interface.h,
	* src/main.cc: as the return value of create_window was only used to
	display the widget, made create_window a void method and display
	widget from there

2003-08-07  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: added libglade dependency
	* data/Makefile.am: added glade file
	* data/qalculate.glade: user interface definition
	* src/callbacks.cc: removed the extern GtkWidget *window
	* src/interface.cc: started migration to glade
	* src/interface.h: started migration to glade
	* src/main.cc: started migration to glade
