@@ -44,7 +44,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">Degrees</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_degrees1_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
 			    </widget>
 			  </child>
@@ -55,6 +55,7 @@
 			      <property name="label" translatable="yes">Radians</property>
 			      <property name="use_underline">True</property>
 			      <property name="active">False</property>
+			      <property name="group">menu_item_degrees</property>
 			      <signal name="activate" handler="on_radians1_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
 			    </widget>
 			  </child>
@@ -65,6 +66,7 @@
 			      <property name="label" translatable="yes">Gradians</property>
 			      <property name="use_underline">True</property>
 			      <property name="active">False</property>
+			      <property name="group">menu_item_degrees</property>
 			      <signal name="activate" handler="on_gradians1_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
 			    </widget>
 			  </child>
@@ -205,47 +207,114 @@
 	  </child>
 
 	  <child>
-	    <widget class="GtkMenuItem" id="item14">
+	    <widget class="GtkMenuItem" id="menu_item_result">
 	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">item14</property>
+	      <property name="label" translatable="yes">Result</property>
 	      <property name="use_underline">True</property>
 
 	      <child>
-		<widget class="GtkMenu" id="item14_menu">
+		<widget class="GtkMenu" id="menu_item_result_menu">
 
 		  <child>
-		    <widget class="GtkMenuItem" id="item13">
+		    <widget class="GtkMenuItem" id="menu_item_number_base">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">item13</property>
+		      <property name="label" translatable="yes">Number Base</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_item13_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
+
+		      <child>
+			<widget class="GtkMenu" id="menu_item_number_base_menu">
+
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_octal">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Octal</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">True</property>
+			      <signal name="activate" handler="on_menu_item_octal_activate" last_modification_time="Fri, 08 Aug 2003 11:39:41 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_decimal">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Decimal</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_octal</property>
+			      <signal name="activate" handler="on_menu_item_decimal_activate" last_modification_time="Fri, 08 Aug 2003 11:39:41 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_hexadecimal">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Hexadecimal</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_octal</property>
+			      <signal name="activate" handler="on_menu_item_hexadecimal_activate" last_modification_time="Fri, 08 Aug 2003 11:39:41 GMT"/>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
 		  <child>
 		    <widget class="GtkMenuItem" id="item12">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">item12</property>
+		      <property name="label" translatable="yes">Display Mode</property>
 		      <property name="use_underline">True</property>
 		      <signal name="activate" handler="on_item12_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
-		    </widget>
-		  </child>
 
-		  <child>
-		    <widget class="GtkMenuItem" id="item11">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">item11</property>
-		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_item11_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
-		    </widget>
-		  </child>
+		      <child>
+			<widget class="GtkMenu" id="item12_menu">
 
-		  <child>
-		    <widget class="GtkMenuItem" id="item10">
-		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">item10</property>
-		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_item10_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_display_normal">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Normal</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">True</property>
+			      <signal name="activate" handler="on_menu_item_display_normal_activate" last_modification_time="Fri, 08 Aug 2003 11:41:06 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_display_scientific">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Scientific</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_display_normal</property>
+			      <signal name="activate" handler="on_menu_item_display_scientific_activate" last_modification_time="Fri, 08 Aug 2003 11:41:06 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_display_non_scientific">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Non-scientific</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_display_normal</property>
+			      <signal name="activate" handler="on_menu_item_display_non_scientific_activate" last_modification_time="Fri, 08 Aug 2003 11:41:06 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkRadioMenuItem" id="menu_item_display_prefixes">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Use prefixes</property>
+			      <property name="use_underline">True</property>
+			      <property name="active">False</property>
+			      <property name="group">menu_item_display_normal</property>
+			      <signal name="activate" handler="on_menu_item_display_prefixes_activate" last_modification_time="Fri, 08 Aug 2003 11:41:06 GMT"/>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
 		    </widget>
 		  </child>
 
@@ -256,11 +325,11 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="item9">
+		    <widget class="GtkMenuItem" id="menu_item_save">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">item9</property>
+		      <property name="label" translatable="yes">Save Result</property>
 		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_item9_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
+		      <signal name="activate" handler="on_item11_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
 		    </widget>
 		  </child>
 
@@ -271,11 +340,20 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkMenuItem" id="item8">
+		    <widget class="GtkMenuItem" id="menu_item_precision">
 		      <property name="visible">True</property>
-		      <property name="label" translatable="yes">item8</property>
+		      <property name="label" translatable="yes">Precision</property>
 		      <property name="use_underline">True</property>
-		      <signal name="activate" handler="on_item8_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
+		      <signal name="activate" handler="on_item10_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
+		    </widget>
+		  </child>
+
+		  <child>
+		    <widget class="GtkMenuItem" id="menu_item_decimals">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">Decimals</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_item9_activate" last_modification_time="Fri, 08 Aug 2003 10:07:30 GMT"/>
 		    </widget>
 		  </child>
 		</widget>
@@ -1241,145 +1319,6 @@
 	  <property name="fill">False</property>
 	</packing>
       </child>
-    </widget>
-  </child>
-</widget>
-
-<widget class="GtkMenu" id="menu_result">
-
-  <child>
-    <widget class="GtkMenuItem" id="menu_item_number_base">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Number Base</property>
-      <property name="use_underline">True</property>
-
-      <child>
-	<widget class="GtkMenu" id="menu_item_number_base_menu">
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_octal">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Octal</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_octal_activate" last_modification_time="Thu, 07 Aug 2003 17:16:38 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_decimal">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Decimal</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_decimal_activate" last_modification_time="Thu, 07 Aug 2003 17:16:38 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_hexadecimal">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Hexadecimal</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_hexadecimal_activate" last_modification_time="Thu, 07 Aug 2003 17:16:38 GMT"/>
-	    </widget>
-	  </child>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="menu_item_display_mode">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Display Mode</property>
-      <property name="use_underline">True</property>
-
-      <child>
-	<widget class="GtkMenu" id="menu_item_display_mode_menu">
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_display_normal">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Normal</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_display_normal_activate" last_modification_time="Thu, 07 Aug 2003 20:25:34 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_display_scientific">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Scientific</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_display_scientific_activate" last_modification_time="Thu, 07 Aug 2003 20:25:34 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_display_non_scientific">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Non-scientific</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_display_non_scientific_activate" last_modification_time="Thu, 07 Aug 2003 20:25:34 GMT"/>
-	    </widget>
-	  </child>
-
-	  <child>
-	    <widget class="GtkRadioMenuItem" id="menu_item_display_prefixes">
-	      <property name="visible">True</property>
-	      <property name="label" translatable="yes">Use prefixes</property>
-	      <property name="use_underline">True</property>
-	      <property name="active">True</property>
-	      <signal name="activate" handler="on_menu_item_display_prefixes_activate" last_modification_time="Thu, 07 Aug 2003 20:25:34 GMT"/>
-	    </widget>
-	  </child>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkImageMenuItem" id="menu_item_save">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Save result</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_menu_item_save_activate" last_modification_time="Thu, 07 Aug 2003 20:37:30 GMT"/>
-      <accelerator key="C" modifiers="GDK_CONTROL_MASK" signal="activate"/>
-
-      <child internal-child="image">
-	<widget class="GtkImage" id="image3">
-	  <property name="visible">True</property>
-	  <property name="stock">gtk-save</property>
-	  <property name="icon_size">1</property>
-	  <property name="xalign">0.5</property>
-	  <property name="yalign">0.5</property>
-	  <property name="xpad">0</property>
-	  <property name="ypad">0</property>
-	</widget>
-      </child>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="menu_item_precision">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Precision</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_menu_item_precision_activate" last_modification_time="Thu, 07 Aug 2003 20:40:08 GMT"/>
-    </widget>
-  </child>
-
-  <child>
-    <widget class="GtkMenuItem" id="menu_item_decimals">
-      <property name="visible">True</property>
-      <property name="label" translatable="yes">Decimals</property>
-      <property name="use_underline">True</property>
-      <signal name="activate" handler="on_menu_item_decimals_activate" last_modification_time="Thu, 07 Aug 2003 20:40:08 GMT"/>
     </widget>
   </child>
 </widget>
