@@ -2,6 +2,12 @@
 
 	* data/qalculate.glade,
 	* src/callbacks.cc,
+	* src/interface.cc: finished moving the menus
+
+2003-08-08  Sven Herzberg  <herzi@gnome-de.org>
+
+	* data/qalculate.glade,
+	* src/callbacks.cc,
 	* src/interface.cc: moving the menus to a (hidden) menubar to
 	solve a warning regarding an accelerator group
 
